# interview

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  smoke_test.py
.github/workflows/: tests.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: kiro-cli.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/specs/001-slack-stock-notifier/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/specs/001-slack-stock-notifier/checklists/: requirements.md
.specify/specs/001-slack-stock-notifier/contracts/: slack-messages.md
.specify/specs/002-containerize-slack-notifier/: plan.md  research.md  spec.md  tasks.md
.specify/specs/002-containerize-slack-notifier/checklists/: requirements.md
.specify/workflows/: workflow-registry.json
slack_notifier/: config.py  db.py  jobs.py  scheduler.py  slack.py
tests/integration/: test_jobs_integration.py  test_scheduler.py
tests/unit/: test_config.py  test_jobs.py  test_slack.py
