[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-notifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.10.4",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.36",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-mock==3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
